--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -1,6 +1,7 @@
 .nav-notification {
   margin: 0;
   padding: 8px;
+  padding-left: 4px;
   color: white !important;
   font-weight: 300;
   font-size: 18px;
