--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -63,7 +63,7 @@
           <a class="nav-notification dropdown-toggle" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-action="click->notification#markRead" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
             <span>No new notifications.</span>
           </div>
         </li>
