--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -64,7 +64,7 @@
             <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
-            <span>No new notifications.</span>
+            <span class="dropdown-item">No new notifications.</span>
           </div>
         </li>
       <% else %>
