--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -14,8 +14,8 @@ $body-color: $gray;
 $primary:    $blue;
 $success:    $green;
 $info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$danger:     $orange;
+$warning:    $red;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
