--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -31,8 +31,8 @@
 
 .chat-btn a {
   text-decoration: none;
-  color: darkgray;
-  font-size: 0.9rem;
+  color: $primary-color;
+  font-size: 1.2rem;
 
   &:hover {
     color: gray;
