--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -21,7 +21,5 @@
     <% end %>
   </div>
 
-  <div class="action-button">
-    <%= link_to "Back to home", root_path, class: 'btn btn-flat' %>
-  </div>
+    <%= link_to "<<", root_path, class: 'back-btn' %>
 </div>
