--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,16 +3,7 @@
   background-color: transparent;
 }
 
-.navbar-logo {
-  display: flex;
-  align-items: top;
-
-  h3 {
-    font-weight: bold;
-  }
-}
-
-.navbar .navbar-logo img {
+.navbar-logo img {
   width: 120px;
   height: 60px;
 }
