--- a/app/views/coaches/_lessonfilterform.html.erb
+++ b/app/views/coaches/_lessonfilterform.html.erb
@@ -14,10 +14,7 @@
   </div>
 
   <div>
-    <%= link_to(
-      'Reset filters',
-      reset_filterrific_url,
-    ) %>
+    <%= link_to 'Reset filters', reset_filterrific_url, :class => "reset-filter" %>
   </div>
   <%# add an automated spinner to your form when the list is refreshed %>
   <%# <%= render_filterrific_spinner %>
