--- a/app/views/lessons/_list.html.erb
+++ b/app/views/lessons/_list.html.erb
@@ -1,14 +1,16 @@
 <div class="container" data-controller='lesson' data-lesson-target='list'>
-  <h1 class='header'>My Lessons</h1>
+  <div class='lesson-header'>
+  <h1>My Lessons</h1>
+  </div>
 
-   <div class='lesson-header-links'>
+  <div class='lesson-header-links'>
     <%= link_to 'All', lessons_path, class:"lesson-header-link active", data: { action: 'click->lesson#displayLessons'}, remote: true %>
     <%= link_to 'Upcoming', upcoming_lessons_path, class:"lesson-header-link", data: { action: 'click->lesson#displayLessons'}, remote: true  %>
     <%= link_to 'History', history_lessons_path, class:"lesson-header-link", data: { action: 'click->lesson#displayLessons'}, remote: true  %>
   </div>
 
   <%= render 'lessons_list'%>
-
+  <%= link_to "<<", root_path, class: 'back-btn' %>
   <%# lesson modal %>
   <div class="modal fade" id="lessonModal"  tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true" data-lesson-target='lessonModal'>
     <div class="modal-dialog" role="document" data-lesson-target='modalContent'></div>
