--- a/app/views/coach/lessons/_lesson_card.html.erb
+++ b/app/views/coach/lessons/_lesson_card.html.erb
@@ -10,16 +10,16 @@
           <% end %>
           <span>Location: <%= lesson.location.name %></span>
         </div>
-        
+
           <% unless lesson.status %>
-            <%= link_to 'Edit',  edit_coach_lesson_path(lesson), class:'btn btn-outline-secondary btn-sm',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
-          <% end %> 
-          <%= link_to 'Details',  coach_lesson_path(lesson), class:'btn btn-outline-secondary btn-sm',  data: { action: "click->lesson#displayShowForm", }, remote: true %>
+            <%= link_to 'Edit',  edit_coach_lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
+          <% end %>
+          <%= link_to 'Details',  coach_lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayShowForm", }, remote: true %>
           <%= link_to "Delete",
                       coach_lesson_path(lesson),
                       method: :delete,
                       remote: true,
                       data: { confirm: "Are you sure?" },
-                      class: "btn btn-outline-danger btn-sm" %>
+                      class: "btn btn-primary btn-sm" %>
 
 </div>
