--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -37,10 +37,18 @@
     </div>
   </div>
   <hr>
-<button class='btn button-primary' id='coach-toggle-btn' data-toggle="collapse" href="#coach-lessons-list" aria-expanded="false">Show Lessons</button>
+
+<%# <button class='btn btn-primary' id='coach-toggle-btn' data-toggle="collapse" href="#coach-lessons-list" aria-expanded="false">Show Lessons</button> %>
 
 <%# coach lessons  %>
-<div class="container mt-3 collapse" id='coach-lessons-list'>
-  <%= render( partial: 'coaches/lessonfilterform' ) %>
-  <%= render( partial: 'coaches/lessonlist') %>
+<%# <div class="container mt-3 collapse" id='coach-lessons-list'> %>
+<div>
+  <div class='lesson-filter'>
+    <%= render( partial: 'coaches/lessonfilterform' ) %>
+  </div>
+  <div class='coach-lessons'>
+    <%= render( partial: 'coaches/lessonlist') %>
+  </div>
 </div>
+
+<%= link_to "<<", :back, class:"back-btn" %>
