--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,15 @@
   </head>
 
   <body>
-  <% unless controller_name == "pages" %>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
-  <% end %>
+    <% unless controller_name == "pages" %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+    <% end %>
 
     <%= yield %>
+
+    <footer>
+      <%= render 'shared/footer' %>
+    </footer>
   </body>
 </html>
