--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,7 @@
 					</div>
 				</div>
 			</div>
+
 			<!-- Carousel controls -->
 			<a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
 				<i class="fas fa-angle-left"></i>
@@ -55,6 +56,7 @@
 			<a class="carousel-control-next" href="#myCarousel" data-slide="next">
 				<i class="fas fa-angle-right"></i>
 			</a>
+      </div>
 		</div>
 	</div>
 </div>
