--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,7 +60,7 @@
         </li>
 
         <li class="nav-notification dropdown" data-controller="notification" data-notification-target="notifications" id="notifications">
-          <a class="nav-notification dropdown-toggle" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-action="click->notification#markRead" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-notification dropdown-toggle" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
