added minor change to bookmark

--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
  <div class='header header-flex'>
-    <h1><%= @coach.name.capitalize %>'s Profile</h1>
+  <h1><%= @coach.name.capitalize %>'s Profile <span>
     <% if current_user %>
-      <%= link_to "#{current_user.favorited?(@coach) ? 'Bookmark' : 'Un-Bookmark'}" , bookmark_coach_coach_path(@coach), class:'btn button-primary' %>
-    <% end %>
+      <%= link_to '' , bookmark_coach_coach_path(@coach), class: "#{current_user.favorited?(@coach) ? 'fas fa-bookmark' : 'far fa-bookmark'}" %>
+    <% end %></span>
+  </h1>
     <%= link_to "Back", :back, class:"back-btn" %>
   </div>
   <div class="user-information">
