--- a/app/assets/stylesheets/pages/_coach-profile.scss
+++ b/app/assets/stylesheets/pages/_coach-profile.scss
@@ -1,3 +1,13 @@
 .coach-profile-header {
   color: $primary-color;
 }
+
+.fa-bookmark {
+  color: $primary-color;
+  font-size: 2.5rem;
+  margin-left: 1rem;
+
+  &:hover {
+    color: $primary-light-color;
+  }
+}
