--- a/app/views/locations/_info_window.html.erb
+++ b/app/views/locations/_info_window.html.erb
@@ -1,11 +1,11 @@
-<div class="location-info" style='color: black'>
+<div class="location-info" id="location-<%= location.id %>" style='color: black'>
   <h3><%= location.name %></h3>
   <div class="d-flex">
     <% location.sports.uniq.each do |sport| %>
-      <button class="material-icons mr-1 button">,
-      <%# data-search-location-lessons-target = 'selection',
-      data-search-location-lessons-action = "click->search-location-lessons#createlist" }> %>
-      <%= sport_icon(sport.name)%></button>
+      <button class="material-icons mr-1",
+              id="sport-<%= sport.id %>"
+              data-action="click->search-location-lessons#displayLessons">
+      <%= sport_icon(sport.name) %></button>
     <% end %>
   </div>
 </div>
