--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -5,5 +5,8 @@
     </div>
       <%= render( partial: 'locations/map', locals: { markers: @markers } ) %>
     </div>
+    <div class="lesson-list" data-search-location-lessons-target="list">
+      <%= render( partial: 'locations/lesson_list' )  %>
+    </div>
   </div>
 </div>
