--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update", class: 'btn button-primary round' %>
+      <%= f.button :submit, "Update", class: 'btn btn-primary round' %>
     </div>
   <% end %>
 
