--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions", class: 'btn button-primary' %>
+    <%= f.button :submit, "Send me reset password instructions", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
