--- a/app/views/lesson_mailer/lesson_deleted.html.erb
+++ b/app/views/lesson_mailer/lesson_deleted.html.erb
@@ -2,6 +2,8 @@
 
 <p>Your lesson on <%= @lesson.start_date_time.localtime.strftime("%d %b %Y")%> , <%= @lesson.start_date_time.strftime("%I:%M%p") %> has been cancelled by <%= @lesson.coach.name %>. </p>
 
-For more details, visit <a href='localhost:3000'>SportMe homepage</a>
+<p>For more details, visit <a href='localhost:3000'>SportMe webpage</a></p>
+
+<em>This is an automated message. Please do not reply to this email.</em>
 
 
