--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -4,9 +4,7 @@
       <%= render( partial: 'locations/location_filter' ) %>
     </div>
       <%= render( partial: 'locations/map', locals: { markers: @markers } ) %>
-    </div>
-    <div class="lesson-list" data-search-location-lessons-target="list">
-      <%= render( partial: 'locations/lesson_list' )  %>
+    <div class="lesson-list", data-search-location-lessons-target="list">
     </div>
   </div>
 </div>
