--- a/app/views/lessons/_location_lesson_list.html.erb
+++ b/app/views/lessons/_location_lesson_list.html.erb
@@ -1,10 +1,31 @@
-<h3> this is a new lessons list</h3>
-<div>
-  <% @lessons.each do | lesson| %>
-  <ul>
-    <li>
-      <%= lesson.description %>
-    </li>
-  </ul>
+<h3> Showing <%= pluralize( @lessons.count, 'lesson' ) %></h3>
+<% date = "" %>
+<% @lessons.each do | lesson| %>
+  <% if lesson.start_date_time.localtime.strftime("%d %b %Y") != date %>
+    <div class='accounts-date-card'> <%= lesson.start_date_time.localtime.strftime("%d %b %Y") %></div>
+    <div class="lesson-card">
+      <div class="lesson-date">
+        <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
+        <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
+        <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
+      </div>
+
+      <div class="lesson-details">
+        <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
+        <span>Coach: <%= User.find(lesson.coach_id).name %></span>
+        <span>Location: <%= lesson.location.name %></span>
+      </div>
+
+      <div class="lesson-price">
+        <p>Price: <%= humanized_money_with_symbol(lesson.price) %></p>
+      </div>
+
+      <div class="user-action">
+        <%= form_tag orders_path do %>
+          <%= hidden_field_tag 'lesson_id', lesson.id %>
+          <%= submit_tag 'Book Lesson', class: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
   <% end %>
-</div>
+<% end %>
