--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,9 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 50px;
+  padding: 1.5rem;
   color: $primary-color;
-  margin-top: 10rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  max-height: 6rem;
 }
 .footer-links {
   display: flex;
@@ -14,11 +17,11 @@
 .footer-links a {
   color: $primary-color;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 1.2rem;
   padding: 0px 10px;
 }
 .footer-links a:hover {
-  opacity: 1;
+  opacity: 0.8;
 }
 .footer .fa-heart {
   color: #D23333;
@@ -31,7 +34,7 @@
   padding-top: 20px;
   width: 300px;
   h2 {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: $light;
   }
 }
@@ -61,9 +64,10 @@
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: $breakpoint-width-medium) {
   .footer {
     flex-direction: column;
+    max-height: 15rem;
   }
   .footer-links {
     padding: 10px 0px;
