--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,17 +25,17 @@
       }
     </style>
   </head>
-
   <body>
     <% unless controller_name == "pages" %>
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
     <% end %>
-
+    <div class='page-container'>
+    <%= render 'shared/modeswitch' %>
     <%= yield %>
-
-    <footer>
+      <footer>
       <%= render 'shared/footer' %>
     </footer>
+    </div>
   </body>
 </html>
