changed color scheme for light mode. Edited layouts

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -2,9 +2,10 @@
     max-width: 1200px;
     margin: 0 auto;
     max-height: 1200px;
+    background-color: var(--background-color-light);
+    padding: 2rem;
+    border-radius: 8px;
   }
-
-
 
 // .fc-list-event:hover {
 //   background-color: transparent !important;
@@ -14,7 +15,7 @@
 //list view
 tr.fc-list-event:hover{
   background-color: none, !important;
-  color: black;
+  color: var(--background-color);
 }
 
 tr.fc-list-day {
@@ -23,11 +24,11 @@ tr.fc-list-day {
 
 //week/day view
 .fc-timegrid-slot {
-  color: white;
+  color: var(--text-color);
 }
 
 .fc-toolbar-title {
-  color: white;
+  color: var(--text-color);
 }
 .fc-col-header-cell-cushion {
   color: var(--text-color);
@@ -46,7 +47,7 @@ tr.fc-list-day {
   position: absolute;
   z-index: 9999;
   background: transparent;
-  color: black;
+  color: var(--background-color);
   width: 150px;
   border-radius: 3px;
   box-shadow: 0 0 2px rgba(0,0,0,0.5);
@@ -55,7 +56,7 @@ tr.fc-list-day {
 }
 
 .bs-tooltip-top .arrow::before {
-    border-top-color: white;
+    border-top-color: var(--text-color);
 }
 // .style5 .tooltip {
 //   background: white;
