--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -20,6 +20,9 @@
 
 .carousel-indicators {
   bottom: -2.4375rem;
+  li {
+    background-color: var(--text-color);
+  }
 }
 
 .carousel-control-prev {
