--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   justify-content: space-between;
-  background-color: transparent;
+  background-color: var(--navbar-background-color);
 }
 
 .navbar-logo img {
