--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 8px;
   padding-left: 4px;
-  color: white !important;
+  color: var(--text-color) !important;
   font-weight: 300;
   font-size: 18px;
 }
