--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,7 @@
 .container > h3 {
   padding-top: 70px;
   font-size: 40px;
-  color: white;
+  color: var(--text-color);
   letter-spacing: 0.5px;
   font-weight: bold;
   text-align: center;
