--- a/app/views/coach/lessons/_show.html.erb
+++ b/app/views/coach/lessons/_show.html.erb
@@ -39,7 +39,7 @@
                     method: :delete,
                     data: { confirm: "Are you sure?" },
                     class: "btn btn-danger" %>
-        <%= link_to 'Edit Lesson',  edit_coach_lesson_path(lesson), class:'btn button-primary float-right',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
+        <%= link_to 'Edit Lesson',  edit_coach_lesson_path(lesson), class:'btn btn-primary float-right',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
         <% end %>
   </div> 
 </div>
