--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #313332;
+  background: var(--footer-background-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,7 +8,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  max-height: 6rem;
+  max-height: 7rem;
 }
 .footer-links {
   display: flex;
