--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -51,14 +51,22 @@ $breakpoint-width-bootstrap-sm: 575px;
   --primary-dark-color: #ff3d00;
   --background-color:#121212;
   --background-color-light: #171717;
+  --background-color-hover: #3d3d3d;
   --text-color: #C9D1D9;
   --text-color-active: #ff5b03b5;
+  --border-color: #C9D1D9;
+  --navbar-background-color: transparent;
+  --footer-background-color: #313332;
 }
 
 .light-theme {
-  --background-color:#f1f1f1;
-  --background-color-light: #f1f1f1;
+  --background-color:#FFFAF4;
+  --background-color-light: #fcf3e8;
+  --background-color-hover: #f1f1f1;
   --text-color: #121212; 
+  --border-color: #c3c3c3;
+  --footer-background-color: #f6dcbc;
+  --navbar-background-color: var(--footer-background-color); 
 }
 
 body {
