--- a/app/assets/stylesheets/pages/_lessons.scss
+++ b/app/assets/stylesheets/pages/_lessons.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background: black;
+  background: var(--background-color);
   margin-bottom: 8px;
   padding-left: 24px;
   padding-right: 24px;
@@ -15,70 +15,65 @@
   transition: 400ms ease-in;
   border-style: solid;
   border-width: 0.1rem;
-  border-color: white;
-  color:white;
+  border-color: var(--border-color);
+  color: var(--text-color);
   font-weight: 300;
 
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   }
-}
 
-.border-green {
-  border-left: 8px solid green;
-}
+  .border-green {
+    border-left: 8px solid green;
+  }
 
-.border-red {
-  border-left: 8px solid $danger-color;
-}
+  .border-red {
+    border-left: 8px solid $danger-color;
+  }
 
-.flex-space-between {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.lesson-price {
-  padding: 20px;
-  text-align: center;
-}
-
-.lesson-details {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: left;
-  flex-grow: 1;
-  margin-left: 40px;
-}
-
-.lesson-date {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.lesson-date.duration {
-  font-size: smaller;
-  color: grey;
-}
-
-.lesson-status.booked {
-  font-size: 10px;
-  border-radius: 50px;
-  padding: 2px 16px;
-}
-
-.lesson-card-status.available {
-  background: lightgreen;
-  font-size: 10px;
-  border-radius: 50px;
-  padding: 2px 28px;
-}
-
-.lesson-card-status.booked {
-  background: rgb(255, 254, 254);
+  .lesson-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
+    flex-grow: 1;
+    margin-left: 40px;
+  }
+  .lesson-price {
+    padding: 20px;
+    text-align: center;
+  }
+  
+  
+  .lesson-date {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  
+  .lesson-date.duration {
+    font-size: smaller;
+    color: grey;
+  }
+  
+  .lesson-status.booked {
+    font-size: 10px;
+    border-radius: 50px;
+    padding: 2px 16px;
+  }
+  
+  .lesson-card-status.available {
+    background: lightgreen;
+    font-size: 10px;
+    border-radius: 50px;
+    padding: 2px 28px;
+  }
+  
+  .lesson-card-status.booked {
+    background: rgb(255, 254, 254);
+  }
+  
 }
 
 .lesson-header-links {
@@ -89,6 +84,12 @@
     line-height: 50vh;
     text-align: center;
   }
+}  
+
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .lesson-header-link {
@@ -129,8 +130,8 @@
 
 .modal-content {
   color: var(--text-color);
-  background-color: var(--background-color-light);
-  border: 1px solid var(--text-color) !important;
+  background-color: var(--background-color);
+  border: 1px solid var(--border-color) !important;
 }
 
 // @keyframes show-lessons {
