changed primary color for light theme

--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -60,6 +60,7 @@ $breakpoint-width-bootstrap-sm: 575px;
 }
 
 .light-theme {
+  --primary-color: #E5542E;
   --background-color:#FFFAF4;
   --background-color-light: #fcf3e8;
   --background-color-hover: #f1f1f1;
