updated user journey

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
           <%= link_to "Home", root_path, class: "nav-link  #{"active" if current_page?(root_path)}" %>
         </li>
         <li class="nav-item">
+          <%= link_to "Find a Sport", sports_path, class: "nav-link  my-lessons-btn #{"hide" if coach_path? } #{"active" if current_page?(lessons_path) || current_page?(upcoming_lessons_path)|| current_page?(history_lessons_path)}" %>
+        </li>
+        <li class="nav-item">
             <%= link_to "My Lessons", lessons_path, class: "nav-link  my-lessons-btn #{"hide" if coach_path? } #{"active" if current_page?(lessons_path) || current_page?(upcoming_lessons_path)|| current_page?(history_lessons_path)}" %>
         </li>
         <% if current_user.coach_profile && current_user.coach_profile.id%>
@@ -63,7 +66,7 @@
               <div class="dropdown-menu">
                 <% if current_user.all_favorited.empty? %>
                   <div class='dropdown-item'>No bookmarked coaches.</div>
-                <% else %> 
+                <% else %>
                   <% current_user.all_favorited.each do |coach| %>
                       <%= link_to "#{coach.name}", coach_path(coach), class: "dropdown-item" %>
                   <% end %>
